src-ken&y/objects/Supplier_Invoice__c.object
<CustomObject>
    <customHelpPage>HelpSupplierInvoice</customHelpPage>
    <description>Record invoices for items or services  that are received from a supplier.  Bills can be recorded with or without purchase orders</description>
    <fields>
        <fullName>Accounting_Default_CR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>override the normal rules with these segments, apply to each line item at shipment time</description>
        <label>Accounting Segments CR</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Supplier Invoice</relationshipLabel>
        <relationshipName>Supplier_Invoice_CR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accounting_Default_DR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>override the normal rules with these segments, apply to each line item at shipment time</description>
        <label>Accounting Segments DR</label>
        <referenceTo>Accounting_Default__c</referenceTo>
        <relationshipLabel>Supplier Invoice</relationshipLabel>
        <relationshipName>Supplier_Invoice_DR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Always_Take_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Acts as an indicator flag to always take the discount earned on payment terms regardless of the discount due date. Will be defaulted from the Remit to Supplier associated with this invoice</description>
        <label>Always Take Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <description>This field is no longer used</description>
        <label>Amount Due</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apply_to_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apply to Invoice</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an invoice that matches the supplier on the credit memo</errorMessage>
            <filterItems>
                <field>Supplier_Invoice__c.Supplier__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier__c</valueField>
            </filterItems>
            <filterItems>
                <field>Supplier_Invoice__c.Invoice_Type__c</field>
                <operation>notEqual</operation>
                <value>Credit Memo</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Supplier_Invoice__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check mark indicates that a supplier invoice is automatically generated by the Supplier Invoice Automation batch job upon receipt of goods.</inlineHelpText>
        <label>Auto Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>IF( OR(ISPICKVAL(Status__c, &quot;Void&quot;),ISPICKVAL(Status__c, &quot;Cancelled&quot;)) , 0, (Invoice_Amount__c  -  Amount_Paid__c +  Credit_Memo_Amount_Applied__c - Discount_Taken__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Job_ID__c</fullName>
        <label>Batch Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_From_City__c</fullName>
        <label>Bill From City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_From_Country__c</fullName>
        <label>Bill From Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_From_State__c</fullName>
        <label>Bill From State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_From_Street__c</fullName>
        <label>Bill From Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_From_Zip_Code__c</fullName>
        <label>Bill From Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <description>Address of company on supplier invoice</description>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <description>Address of company on supplier invoice</description>
        <label>Bill To Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <description>Address of company on supplier invoice</description>
        <label>Bill To State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <description>Address of company on supplier invoice</description>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Code__c</fullName>
        <description>Address of company on supplier invoice</description>
        <label>Bill To Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charged_Tax__c</fullName>
        <label>Charged Tax</label>
        <summarizedField>Supplier_Invoice_Line__c.Charged_Tax__c</summarizedField>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Amount_Applied__c</fullName>
        <label>Credit Memo Amount Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Amount__c</fullName>
        <label>Credit Memo Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Applied__c</fullName>
        <label>Credit Memo Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Balance__c</fullName>
        <description>Reflects the credit memo amount available for use</description>
        <label>Credit Memo Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Supplier Invoice Currency</relationshipLabel>
        <relationshipName>Supplier_Invoice_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <description>Date when the invoice happened</description>
        <label>Invoice Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date on which invoice was received</description>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Paid__c</fullName>
        <description>This field stores the information of the date/time on which the SI is paid in full and closed.</description>
        <label>Date Paid</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <formula>Now()-Date_Invoiced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <description>This Formula field calculates the days past due, since the invoice is fully paid.</description>
        <formula>if ( Payment_Due_Date__c &gt; TODAY() , 0 , 
BLANKVALUE(DATEVALUE(Date_Time_Paid__c),TODAY()) - Payment_Due_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Date__c</fullName>
        <description>Calculated field:  supplier invoice date + discount days from the terms</description>
        <formula>IF(NOT(ISBLANK(Payment_Term__c)), DATEVALUE(Date_Invoiced__c)  +   Payment_Term__r.Discount_Days__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date (supplier invoice date + discount days from the terms) is system generated.</inlineHelpText>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Earned__c</fullName>
        <formula>IF(  ISPICKVAL( Invoice_Type__c , &quot;Credit Memo&quot;) || ISPICKVAL( Invoice_Type__c , &quot;Prepayment&quot;) , 0 ,IF ( ISNULL( Discount_Override_Date__c ), IF ( Always_Take_Discount__c , ROUND(Early_Payment_Rate__c * Invoice_Amount__c,2), IF ( TODAY() &gt; Discount_Date__c , 0, ROUND(Early_Payment_Rate__c * Invoice_Amount__c,2))), IF ( TODAY() &gt; Discount_Override_Date__c, 0, ROUND(Early_Payment_Rate__c * Invoice_Amount__c,2))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>To be eligible for the discount, the supplier&apos;s payment must be received on or before the given discount date.</inlineHelpText>
        <label>DEPRECATED</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Override_Date__c</fullName>
        <description>The discount earned formula uses this date if filled in instead of the discount date.</description>
        <inlineHelpText>The Discount Override Date triggers the system to recalculate the Discount Earned amount. If the Discount Override Date is greater than today, the Discount Earned is calculated as follows: Early Payment Rate * Invoice amount.</inlineHelpText>
        <label>Discount Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to record the total discount taken against the bill</description>
        <label>Discount Taken</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_to_Take__c</fullName>
        <description>Discount to Take</description>
        <label>DEPRECATED</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Payment_Rate__c</fullName>
        <description>Term&apos;s Discount Percent</description>
        <formula>Payment_Term__r.Discount_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The discount (percent) specified by the early payment terms.</inlineHelpText>
        <label>Early Payment Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exception_Details__c</fullName>
        <description>Holds details of exceptions and errors caught during validation for the header and the lines.</description>
        <label>Exception Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates there is a problem with the data as entered.  This flag needs to be cleared before an invoice can be &quot;Approved for Payment&quot;</description>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exceptions_Count__c</fullName>
        <label>Exceptions Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalize_On_Creation__c</fullName>
        <formula>false</formula>
        <inlineHelpText>A check mark indicates that the invoice  is automatically finalized and accounted when created, even if there are exceptions.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is set to true when the invoice is finalized and no more changes are expected</description>
        <inlineHelpText>A check mark indicates that the document is final. Kenandy will automatically generate an accounting entry for it in the next scheduled batch process.</inlineHelpText>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forecast_Bucket__c</fullName>
        <formula>IF( Payment_Due_Date__c &lt; TODAY()-6, &apos;Prior&apos;, 
IF( Payment_Due_Date__c &gt; TODAY() + 26, &apos;Later&apos;, 
TEXT(Payment_Due_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Exceptions__c</fullName>
        <formula>Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Line_Exceptions__c</fullName>
        <formula>Line_Exceptions_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Line Exceptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this invoice is on hold</description>
        <label>Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <inlineHelpText>The invoice amount is required. Invoice cannot be approved for payment if the invoice amount does not match the total amount on each line of the invoice.</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Visited_By_Batch__c</fullName>
        <description>This field is used to keep track of the time that this invoice was picked up by the SI Draft Inspect batch process.</description>
        <label>Last Visited By Batch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Exceptions_Count__c</fullName>
        <label>Line Exceptions Count</label>
        <summaryFilterItems>
            <field>Supplier_Invoice_Line__c.Has_Exceptions__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <description>Add memo to explain discrepancies. For example, if an item is short paid because the supplier has incorrectly put a charge enter reason in the memo.</description>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Date__c</fullName>
        <description>Date payment due</description>
        <formula>IF ( NOT(ISBLANK(Payment_Term__c)) &amp;&amp;  ISBLANK(  Payment_Due_Override_Date__c  ),DATEVALUE(Date_Invoiced__c)+ Payment_Term__r.Due_Days__c, Payment_Due_Override_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Override_Date__c</fullName>
        <description>The payment due date formula field uses this date if filled in instead of calculating based on payment terms.</description>
        <label>Payment Due Override Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method_G__c</fullName>
        <description>Defines how the invoice must be paid to the supplier.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Defines how the invoice must be paid to the supplier.</description>
        <label>DEPRECATED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The terms as shown on the supplier invoice</description>
        <label>Payment Terms</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Purchase Order.</description>
        <label>Purchase Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Purchase_Order__c.Supplier__c</field>
                <operation>equals</operation>
                <valueField>$Source.Supplier__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remit_to_City__c</fullName>
        <description>Remit to City</description>
        <label>Remit-to City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Country__c</fullName>
        <description>Remit to Country</description>
        <label>Remit-to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_State__c</fullName>
        <description>Remit to State</description>
        <label>Remit-to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Street__c</fullName>
        <description>Remit to Street</description>
        <label>Remit-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remit_to_Zip_Code__c</fullName>
        <description>Remit to Zip Code</description>
        <label>Remit-to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remittance_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remittance Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_To_Vendor__c</fullName>
        <description>Scrap field used by the return to vendor screen. Should not be displayed to the user.</description>
        <label>Return To Vendor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Order.</description>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Amount__c</fullName>
        <label>Sales Tax Amount</label>
        <summarizedField>Supplier_Invoice_Line__c.Sales_Tax_Amount__c</summarizedField>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_From_City__c</fullName>
        <label>DEPRECATED</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_Country__c</fullName>
        <label>DEPRECATED</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_State__c</fullName>
        <label>DEPRECATED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_From_Street__c</fullName>
        <label>DEPRECATED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_From_Zip_Code__c</fullName>
        <label>DEPRECATED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>DEPRECATED</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>DEPRECATED</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>DEPRECATED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>DEPRECATED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Code__c</fullName>
        <label>DEPRECATED</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of bill</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Days_Due__c</fullName>
        <description>Number of days from today to the Payment Due Date</description>
        <formula>Payment_Due_Date__c - TODAY()</formula>
        <inlineHelpText>Number of days from today to the Payment Due Date. Payment Due Date - Today&apos;s Date.</inlineHelpText>
        <label>Supplier Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice__c</fullName>
        <description>Supplier invoice no. reference</description>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remit To Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Remit-To</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Invoices</relationshipLabel>
        <relationshipName>Supplier_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_and_Invoice__c</fullName>
        <description>Supplier and Invoice number</description>
        <externalId>true</externalId>
        <label>Supplier and Invoice</label>
        <length>101</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Extended_Price__c</fullName>
        <description>Rollup of the line extended prices</description>
        <label>Total Extended Price</label>
        <summarizedField>Supplier_Invoice_Line__c.Extended_Price__c</summarizedField>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice__c</fullName>
        <formula>If(( Invoice_Amount__c) - Discount_Amount__c &lt;0,0,( Invoice_Amount__c)- Discount_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount due = Sales Tax + Invoice Amount - Discount Amount.</inlineHelpText>
        <label>Total Invoice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency of this Supplier Invoice</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <inlineHelpText>The transaction date can be populated from any source using a workflow depending on customer need.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Total__c</fullName>
        <description>Rollup of the line VAT amounts</description>
        <label>VAT Amount</label>
        <summarizedField>Supplier_Invoice_Line__c.VAT_Amount__c</summarizedField>
        <summaryForeignKey>Supplier_Invoice_Line__c.Supplier_Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Visited_Last_By_Batch__c</fullName>
        <formula>IF(OR(LastModifiedDate - Last_Visited_By_Batch__c != 0, ISNULL(Last_Visited_By_Batch__c), ISBLANK(Last_Visited_By_Batch__c)), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visited Last By Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Supplier__c</columns>
        <columns>Supplier_Invoice__c</columns>
        <columns>Date_Invoiced__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Currency__c</columns>
        <columns>Balance_Due__c</columns>
        <columns>Payment_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Invoice_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Invoice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Amount_due_cannot_be_negative</fullName>
        <active>true</active>
        <errorConditionFormula>Amount_Due__c &lt;0</errorConditionFormula>
        <errorMessage>Amount due cannot be negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorDisplayField>Finalized__c</errorDisplayField>
        <errorMessage>You cannot Finalize a Supplier Invoice that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_be_Approved_for_Pmt_w_Exception</fullName>
        <active>true</active>
        <description>Invoices with an exception cannot be approved for payment</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &apos;Approved&apos;) &amp;&amp;  Has_Exceptions__c</errorConditionFormula>
        <errorDisplayField>Exception__c</errorDisplayField>
        <errorMessage>Cannot be approved for payment while there is still an exception.  Clear all errors before proceeding</errorMessage>
    </validationRules>
</CustomObject>